--- a/Student_hub/Second.html
+++ b/Student_hub/Second.html
@@ -15,180 +15,100 @@
 
         <div id="student-cards-wrapper">
 
+            <!-------------------------------------------------------Student Card------------------------------------------------------------------------------>
             <div class="student-card" style="border-radius: 1.5em;">
-                <!-------------------------------------------------Change your image link here-------------------------------------------------------------------------->
-                <img loading="lazy" style="border-radius: 1.5em;" src="https://github.com/Aryan-Srivastava.png"
-                    alt="Student Image" />
+                <img loading="lazy" style="border-radius: 1.5em;" src="https://github.com/Aryan-Srivastava.png" alt="Student Image" />
                 <div class="student-info">
-                    <!-------------------------------------------------Change your name here-------------------------------------------------------------------------->
                     <h4 class="student-name">Aryan-Srivastava</h4>
-                    <div class="student-bio">
-                        <p maxlength="5">
-                            <!-------------------------------------------------Change your bio here-------------------------------------------------------------------------->
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum, necessitatibus voluptate
-                            quas voluptatibus accusamus maxime.
-                        </p>
-                    </div>
                     <div class="student-links">
-                        <!-------------------------------------------------Change your links here-------------------------------------------------------------------------->
-                        <a href="https://www.linkedin.com/in/aryan-srivastava-08032003/" target="_blank"><i
-                                class="fa fa-linkedin-square"></i></a>
+                        <a href="https://www.linkedin.com/in/aryan-srivastava-08032003/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                         <a href="https://github.com/Aryan-Srivastava" target="_blank"><i class="fa fa-github"></i></a>
-                        <a href="https://www.instagram.com/interstellar._._/" target="_blank"><i
-                                class="fa fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/interstellar._._/" target="_blank"><i class="fa fa-instagram"></i></a>
                         <a href="https://twitter.com/Aryan_Sri_" target="_blank"><i class="fa fa-twitter"></i></a>
                     </div>
-                    <!-------------------------------------------------Change your work profile here-------------------------------------------------------------------------->
                     <div class="student-tech">Web Developer</div>
                 </div>
             </div>
 
-
+            <!-------------------------------------------------------Student Card------------------------------------------------------------------------------>
             <div class="student-card" style="border-radius: 1.5em;">
-                <!-------------------------------------------------Change your image link here-------------------------------------------------------------------------->
-                <img loading="lazy" style="border-radius: 1.5em;" src="https://github.com/Manmohan11.png"
-                    alt="Student Image" />
+                <img loading="lazy" style="border-radius: 1.5em;" src="https://github.com/Manmohan11.png" alt="Student Image" />
                 <div class="student-info">
-                    <!-------------------------------------------------Change your name here-------------------------------------------------------------------------->
                     <h4 class="student-name">Manmohan Dwivedi</h4>
-                    <div class="student-bio">
-                        <p>
-                            <!-------------------------------------------------Change your bio here-------------------------------------------------------------------------->
-                            I am comfortable with Java, github, Html, Css, JavaScript, Adobe Illustrator, Figma.
-                            <br>
-                            I enjoy travelling, capturing moments and editing them.
-                        </p>
-                    </div>
                     <div class="student-links">
-                        <!-------------------------------------------------Change your links here-------------------------------------------------------------------------->
-                        <a href="https://www.linkedin.com/in/manmohan-dwivedi-a7662b1ab/" target="_blank"><i
-                                class="fa fa-linkedin-square"></i></a>
+                        <a href="https://www.linkedin.com/in/manmohan-dwivedi-a7662b1ab/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                         <a href="https://github.com/Manmohan11" target="_blank"><i class="fa fa-github"></i></a>
-                        <a href="https://instagram.com/mmd__01?utm_medium=copy_link" target="_blank"><i
-                                class="fa fa-instagram"></i></a>
+                        <a href="https://instagram.com/mmd__01?utm_medium=copy_link" target="_blank"><i class="fa fa-instagram"></i></a>
                         <a href="https://twitter.com/hey_its_MMD" target="_blank"><i class="fa fa-twitter"></i></a>
                     </div>
-                    <!-------------------------------------------------Change your work profile here-------------------------------------------------------------------------->
                     <div class="student-tech">Frontend Developer</div>
                 </div>
             </div>
 
-
-            <div class="student-card" style="border-radius: 1.5em;">
-                <!-------------------------------------------------Change your image link here-------------------------------------------------------------------------->
-                <img loading="lazy" style="border-radius: 1.5em;" src="https://github.com/AmanAssassin.png"
-                    alt="Student Image" />
-                <div class="student-info">
-                    <!-------------------------------------------------Change your name here-------------------------------------------------------------------------->
+            <!-------------------------------------------------------Student Card------------------------------------------------------------------------------>
+            <div class="student-card" style="border-radius: 1.5em;"> 
+                <img loading="lazy" style="border-radius: 1.5em;" src="https://github.com/AmanAssassin.png" alt="Student Image" />
+                <div class="student-info"> 
                     <h4 class="student-name">Aman Maurya</h4>
-                    <div class="student-bio">
-                        <p>
-                            <!-------------------------------------------------Change your bio here-------------------------------------------------------------------------->
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat consequatur unde assumenda
-                            nemo libero id at Lorem ipsum dolor sit amet.
-                        </p>
-                    </div>
-                    <div class="student-links">
-                        <!-------------------------------------------------Change your links here-------------------------------------------------------------------------->
-                        <a href="https://www.linkedin.com/in/aman-maurya73/" target="_blank"><i
-                                class="fa fa-linkedin-square"></i></a>
+                    <div class="student-links"> 
+                        <a href="https://www.linkedin.com/in/aman-maurya73/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                         <a href="https://github.com/AmanAssassin" target="_blank"><i class="fa fa-github"></i></a>
-                        <a href="https://www.instagram.com/luminous.73/" target="_blank"><i class="fa fa-instagram"
-                                target="_blank"></i></a>
-                        <a href="https://twitter.com/luminous73_" target="_blank"><i class="fa fa-twitter"
-                                target="_blank"></i></a>
-                    </div>
-                    <!-------------------------------------------------Change your work profile here-------------------------------------------------------------------------->
+                        <a href="https://www.instagram.com/luminous.73/" target="_blank"><i class="fa fa-instagram" target="_blank"></i></a>
+                        <a href="https://twitter.com/luminous73_" target="_blank"><i class="fa fa-twitter" target="_blank"></i></a>
+                    </div> 
                     <div class="student-tech">Web Developer</div>
                 </div>
             </div>
 
-
-            <div class="student-card" style="border-radius: 1.5em;">
-                <!-------------------------------------------------Change your image link here-------------------------------------------------------------------------->
-                <img loading="lazy" style="border-radius: 1.5em;" src="https://github.com/amitxharma.png"
-                    alt="Student Image" />
-                <div class="student-info">
-                    <!-------------------------------------------------Change your name here-------------------------------------------------------------------------->
+            <!-------------------------------------------------------Student Card------------------------------------------------------------------------------>
+            <div class="student-card" style="border-radius: 1.5em;"> 
+                <img loading="lazy" style="border-radius: 1.5em;" src="https://github.com/amitxharma.png" alt="Student Image" />
+                <div class="student-info"> 
                     <h4 class="student-name">Amit Sharma</h4>
-                    <div class="student-bio">
-                        <p>
-                            <!-------------------------------------------------Change your bio here-------------------------------------------------------------------------->
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat consequatur unde assumenda
-                            nemo libero id at veniam maxime magni repudiandae?
-                        </p>
-                    </div>
-                    <div class="student-links">
-                        <!-------------------------------------------------Change your links here-------------------------------------------------------------------------->
-                        <a href="www.linkedin.com/in/amit-sharma-787b871b4/" target="_blank"><i
-                                class="fa fa-linkedin-square"></i></a>
+                    <div class="student-links"> 
+                        <a href="www.linkedin.com/in/amit-sharma-787b871b4/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                         <a href="https://github.com/amitxharma" target="_blank"><i class="fa fa-github"></i></a>
-                        <a href="https://www.instagram.com/amitsharma498/" target="_blank"><i
-                                class="fa fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/amitsharma498/" target="_blank"><i class="fa fa-instagram"></i></a>
                         <a href="https://twitter.com/amitsharma75700" target="_blank"><i class="fa fa-twitter"></i></a>
-                    </div>
-                    <!-------------------------------------------------Change your work profile here-------------------------------------------------------------------------->
+                    </div> 
                     <div class="student-tech">Web Developer</div>
                 </div>
             </div>
 
-            <div class="student-card" style="border-radius: 1.5em;">
-                <!-------------------------------------------------Change your image link here-------------------------------------------------------------------------->
-                <img loading="lazy" style="border-radius: 1.5em;" src="https://github.com/ABHISHEK-KUMAR-14022001.png"
-                    alt="Student Image" />
-                <div class="student-info">
-                    <!-------------------------------------------------Change your name here-------------------------------------------------------------------------->
+            <!-------------------------------------------------------Student Card------------------------------------------------------------------------------>
+            <div class="student-card" style="border-radius: 1.5em;"> 
+                <img loading="lazy" style="border-radius: 1.5em;" src="https://github.com/ABHISHEK-KUMAR-14022001.png" alt="Student Image" />
+                <div class="student-info"> 
                     <h4 class="student-name">Abhishek Kumar</h4>
-                    <div class="student-bio">
-                        <p>
-                            <!-------------------------------------------------Change your bio here-------------------------------------------------------------------------->
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat consequatur unde assumenda
-                            nemo libero id at veniam maxime magni repudiandae?
-                        </p>
-                    </div>
-                    <div class="student-links">
-                        <!-------------------------------------------------Change your links here-------------------------------------------------------------------------->
-                        <a href="https://www.linkedin.com/in/abhishek-kumar-076979192/" target="_blank"><i
-                                class="fa fa-linkedin-square"></i></a>
-                        <a href="https://github.com/ABHISHEK-KUMAR-14022001" target="_blank"><i
-                                class="fa fa-github"></i></a>
-                        <a href="https://www.instagram.com/abhishek_kkmr/" target="_blank"><i
-                                class="fa fa-instagram"></i></a>
+                    <div class="student-links"> 
+                        <a href="https://www.linkedin.com/in/abhishek-kumar-076979192/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                        <a href="https://github.com/ABHISHEK-KUMAR-14022001" target="_blank"><i  class="fa fa-github"></i></a>
+                        <a href="https://www.instagram.com/abhishek_kkmr/" target="_blank"><i class="fa fa-instagram"></i></a>
                         <a href="https://twitter.com/abhishe24947477" target="_blank"><i class="fa fa-twitter"></i></a>
-                    </div>
-                    <!-------------------------------------------------Change your work profile here-------------------------------------------------------------------------->
+                    </div> 
                     <div class="student-tech">Web Developer</div>
                 </div>
             </div>
 
-            <div class="student-card" style="border-radius: 1.5em;">
-                <!-------------------------------------------------Change your image link here-------------------------------------------------------------------------->
-                <img loading="lazy" style="border-radius: 1.5em;" src="https://github.com/Mahakpreetkaur.png"
-                    alt="Student Image" />
-                <div class="student-info">
-                    <!-------------------------------------------------Change your name here-------------------------------------------------------------------------->
+            <!-------------------------------------------------------Student Card------------------------------------------------------------------------------>
+            <div class="student-card" style="border-radius: 1.5em;"> 
+                <img loading="lazy" style="border-radius: 1.5em;" src="https://github.com/Mahakpreetkaur.png" alt="Student Image" />
+                <div class="student-info"> 
                     <h4 class="student-name">Mahakpreet Kaur Bhatia</h4>
-                    <div class="student-bio">
-                        <p>
-                            <!-------------------------------------------------Change your bio here-------------------------------------------------------------------------->
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat consequatur unde assumenda
-                            nemo libero id at veniam maxime magni repudiandae?
-                        </p>
-                    </div>
-                    <div class="student-links">
-                        <!-------------------------------------------------Change your links here-------------------------------------------------------------------------->
-                        <a href="https://www.linkedin.com/in/mahakpreet-kaur-29346a211" target="_blank"><i
-                                class="fa fa-linkedin-square"></i></a>
+                    <div class="student-links"> 
+                        <a href="https://www.linkedin.com/in/mahakpreet-kaur-29346a211" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                         <a href="https://github.com/Mahakpreetkaur" target="_blank"><i class="fa fa-github"></i></a>
-                        <a href="https://www.instagram.com/_mahak_preet_" target="_blank"><i
-                                class="fa fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_mahak_preet_" target="_blank"><i class="fa fa-instagram"></i></a>
                         <a href="https://twitter.com/MahakpreetKau12" target="_blank"><i class="fa fa-twitter"></i></a>
-                    </div>
-                    <!-------------------------------------------------Change your work profile here-------------------------------------------------------------------------->
+                    </div> 
                     <div class="student-tech">Web Developer</div>
                 </div>
             </div>
 
+            <!-------------------------------------------------------Student Card------------------------------------------------------------------------------>
+
+            
+        </div> 
 
     </section>
 
